--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,10 @@
         <title>Document</title>
     </head>
     <body>
-        <div id='tetris-player1' style="display: inline;"></div>        
+        <!-- <div class="container"> -->
+            <div id='tetris-player1' style="display: inline;"></div>        
+            <!-- <div id='tetris-player2' style="display: inline;"></div>         -->
+        <!-- </div> -->
 
     </body>
 </html>
